add height for the div for quotations.

--- a/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
+++ b/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
@@ -15,7 +15,7 @@
     </a>
 </div>
 <div>
-    <div id="quotations" class="ag-fresh"></div>
+    <div id="quotations" class="ag-fresh"  style="height: 400px;"></div>
  
 
  
@@ -57,9 +57,7 @@
             document.getElementById('linkNewOrder').setAttribute('class', 'btn');
         }
 
-        if (true) {
-    
-        }
+        
 
     }
 
