--- a/src/AccountGoWeb/Views/Financials/Accounts.cshtml
+++ b/src/AccountGoWeb/Views/Financials/Accounts.cshtml
@@ -7,7 +7,7 @@
 </div>
 <script>
     var columnDefs = [
-        {headerName: "Group", cellRenderer: 'group'},
+        { headerName: "Group", cellRenderer: 'agGroupCellRenderer'},
         {headerName: "Code", width: 100, cellRenderer: function(val){
             return "<a href='account/" + val.data.id + "'>" + val.data.accountCode + "</a>";
         }},
@@ -15,7 +15,8 @@
             if(val.data.childAccounts.length > 0)
                 return "";
             return val.data.accountName;
-        }},
+        }
+        },
         {headerName: "Description", field: "description", width: 250},
         {headerName: "Cash", width: 100, cellRenderer: function(val) {
             if(val.data.isCash)
@@ -56,7 +57,7 @@
         icons: {
             groupExpanded: '<i class="fa fa-minus-square-o"/>',
             groupContracted: '<i class="fa fa-plus-square-o"/>'
-        },        
+        },
         // PROPERTIES
         rowSelection: 'single',
         enableFilter: true,
