--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -390,7 +390,8 @@ desired effect
                             @if (User.IsInRole("SystemAdministrators"))
                             {
                                 <li>
-                                    <a href="#">Security
+                                    <a href="#">
+                                        Security
                                         <span class="pull-right-container">
                                             <i class="fa fa-angle-left pull-right"></i>
                                         </span>
@@ -521,6 +522,8 @@ desired effect
     </div>
     <!-- ./wrapper -->
     <!-- REQUIRED JS SCRIPTS -->
+    <!-- popper.js 1.12.9 -->
+    <script src="~/plugins/popper.js/dist/umd/popper.js"></script>
     <!-- jQuery 2.2.0 -->
     <script src="~/plugins/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap 3.3.6 -->
