--- a/src/AccountGoWeb/Views/Financials/GeneralLedger.cshtml
+++ b/src/AccountGoWeb/Views/Financials/GeneralLedger.cshtml
@@ -3,50 +3,24 @@
 <div>
 </div>
 <div>
-    <div id="masterGL" class="ag-blue"></div>
+    <div id="masterGL" class="ag-blue" style="height:500px;"></div>
 </div>
 <script>
     var columnDefs = [
-        { headerName: "Group", cellRenderer: 'agGroupCellRenderer' },
-        //{headerName: "GL", field: "id", width: 100, callRenderer : function (val) {
-        //    return val.data.id == 0 || val.data.id  ? '' : val.data.GL;
-        //}},
-        {
-            headerName: "Account", field: "accountName", width: 350, cellRenderer: function (val) {
-
-                if (val.data.length > 0)
-                    return "";
-                return val.data.accountName;
-            }
-        },
-        {
-            headerName: "Date", field: "date", width: 250, cellRenderer: function (val) {
-                if (val.data.length > 0)
-                    return val.data.date;
-                return val.data.date;
-            }
-        },
-        {
-            headerName: "Debit", field: "debit", width: 100, cellRenderer: function (val) {
-                if (val.data.length > 0)
-                    return val.data.debit;
-                return val.data.debit;
-            }
-        },
-        {
-            headerName: "Credit", field: "credit", width: 100, cellRenderer: function (val) {
-                if (val.data.length > 0)
-                    return val.data.credit == 'undefined' ? '' : val.data.credit;
-                return val.data.credit;
-            }
-        }
+        { headerName: "Transaction", field: "groupId", width: 50, cellRenderer: "agGroupCellRenderer" },
+        { headerName: "Account", field: "accountName", width: 350 },
+        { headerName: "Debit", field: "debit", width: 100 },
+        { headerName: "Credit", field: "credit", width: 100 },
     ];
-    var xx;
+
     var gridOptions = {
         columnDefs: columnDefs,
-        rowData: @Html.Raw(Model),
+        animateRows: true,
+        enableRangeSelection: true,
+        rowData: null,
+        enableSorting: true,
+        enableFilter: true,
         getNodeChildDetails: function(data) {
-            console.log(data.GroupId);
             console.log(data);
             if (data.childMasterGeneralLedger.length > 0) {
                 return {
@@ -62,17 +36,11 @@
             groupExpanded: '<i class="fa fa-minus-square-o"/>',
             groupContracted: '<i class="fa fa-plus-square-o"/>'
         },
-        // PROPERTIES
-        rowSelection: 'single',
-        enableFilter: true,
-        enableColResize: true,
     };
-
-
 
     function autoSizeAll() {
         var allColumnIds = [];
-        columnDefs.forEach( function(columnDef) {
+        columnDefs.forEach(function (columnDef) {
             allColumnIds.push(columnDef.field);
         });
         gridOptions.columnApi.autoSizeColumns(allColumnIds);
@@ -80,9 +48,10 @@
 
     // wait for the document to be loaded, otherwise
     // ag-Grid will not find the div in the document.
-    document.addEventListener("DOMContentLoaded", function() {
+    document.addEventListener("DOMContentLoaded", function () {
         var eGridDiv = document.querySelector('#masterGL');
         new agGrid.Grid(eGridDiv, gridOptions);
-        //autoSizeAll();
+        gridOptions.api.setRowData(@Html.Raw(Model));
+        autoSizeAll();
     });
 </script>
