--- a/src/AccountGoWeb/Views/Dashboard/_MonthlySales.cshtml
+++ b/src/AccountGoWeb/Views/Dashboard/_MonthlySales.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <canvas width="500" height="250"></canvas>
 
-<script src="~/plugins/d3/build/d3.min.js"></script>
+<script src="~/plugins/d3/dist/d3.min.js"></script>
 
 <script>
     var canvas = document.querySelector("canvas"),
