WIP: fixing left side menu tree-view collapse

--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -266,7 +266,11 @@ desired effect
                         <a href="~/"><i class="fa fa-dashboard"></i><span>Dashboard</span></a>
                     </li>
                     <li class="treeview">
-                        <a href="#"><i class="fa fa-industry"></i> <span>Accounts Receivable</span> <i class="fa fa-angle-left pull-right"></i></a>
+                        <a href="#"><i class="fa fa-industry"></i> <span>Accounts Receivable</span> 
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                              </span>
+                        </a>
                         <ul class="treeview-menu">
                             <li>
                                 <a href="~/quotations/">Sales Quotations</a>
