still fixing left navigation menu

--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -17,11 +17,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.4.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="~/adminLTE/css/AdminLTE.min.css">
+  <!-- Overriding Css -->
+  <link rel="stylesheet" href="~/adminLTE/css/AdminLTEOverride.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect. -->
   <link rel="stylesheet" href="~/adminLTE/css/skins/skin-blue.min.css">
-  <link rel="stylesheet" href="~/adminLTE/css/AdminLTEOverride.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -34,7 +35,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 
     <script src="~/scripts/vendor.chunk.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.2/bluebird.min.js"></script>    
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.2/bluebird.min.js"></script>-->
 </head>
 <!--
 BODY TAG OPTIONS:
@@ -520,7 +521,7 @@ desired effect
     <!-- Bootstrap 3.3.6 -->
     <script src="~/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="~/adminLTE/js/app.js"></script>
+    <script src="~/adminLTE/js/adminlte.js"></script>
     <!--AG-GRID-->
     <script src="~/plugins/ag-grid/dist/ag-grid.js?ignore=notused24"></script>
     <!--TODO : this is temporary solution.-->
