--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -645,6 +645,9 @@
     <script src="~/lib/pace-progress/pace.min.js"></script>
     <script src="~/lib/perfect-scrollbar/dist/perfect-scrollbar.min.js"></script>
     <script src="~/lib/@@coreui/coreui/dist/js/coreui.min.js"></script>
+    <!--AG-GRID-->
+    <script src="~/plugins/ag-grid/dist/ag-grid.js?ignore=notused24"></script>
+    <script src="~/scripts/vendor.chunk.js"></script>
 
     <!-- PLugins and scripts required by the views -->
     @RenderSection("Scripts", required: false)
