--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="description" content="CoreUI - Open Source Bootstrap Admin Template">
-    <title>CoreUI Free Bootstrap Admin Template</title>
+    <meta name="description" content="AccountGo - Open Source Accounting System">
+    <title>AccountGo</title>
     <!-- Icons-->
     <link href="~/lib/@@coreui/icons/css/coreui-icons.min.css" rel="stylesheet">
     <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -22,8 +22,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
-            <img class="navbar-brand-full" src="~/images/brand/logo.svg" width="89" height="25" alt="CoreUI Logo">
-            <img class="navbar-brand-minimized" src="~/images/brand/sygnet.svg" width="30" height="30" alt="CoreUI Logo">
+            <img class="navbar-brand-full" src="~/images/brand/logo.svg" width="89" height="25" alt="AccountGo Logo">
+            <img class="navbar-brand-minimized" src="~/images/brand/sygnet.svg" width="30" height="30" alt="AccountGo Logo">
         </a>
         <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
             <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                    <img class="img-avatar" src="~/images/avatars/user2-160x160.png" alt="admin@bootstrapmaster.com">
+                    <img class="img-avatar" src="~/images/avatars/user2-160x160.png" alt="admin@accountgo.com">
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
                     <div class="dropdown-header text-center">
@@ -310,7 +310,7 @@
                         <a class="btn" href="#">
                             <i class="icon-speech"></i>
                         </a>
-                        <a class="btn" asp-area="" asp-controller="CoreUI" asp-action="Index" asp-route-view="">
+                        <a class="btn" asp-area="" asp-controller="/" asp-action="Index" asp-route-view="">
                             <i class="icon-graph"></i>  Dashboard
                         </a>
                         <a class="btn" href="#">
@@ -352,7 +352,7 @@
                         <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Today</div>
                         <div class="list-group-item list-group-item-accent-warning list-group-item-divider">
                             <div class="avatar float-right">
-                                <img class="img-avatar" src="~/images/avatars/7.jpg" alt="admin@bootstrapmaster.com">
+                                <img class="img-avatar" src="~/images/avatars/7.jpg" alt="admin@accountgo.com">
                             </div>
                             <div>
                                 Meeting with
@@ -367,7 +367,7 @@
                         </div>
                         <div class="list-group-item list-group-item-accent-info">
                             <div class="avatar float-right">
-                                <img class="img-avatar" src="~/images/avatars/4.jpg" alt="admin@bootstrapmaster.com">
+                                <img class="img-avatar" src="~/images/avatars/4.jpg" alt="admin@accountgo.com">
                             </div>
                             <div>
                                 Skype with
@@ -629,12 +629,12 @@
     </div>
     <footer class="app-footer">
         <div>
-            <a href="https://coreui.io">CoreUI</a>
-            <span>&copy; 2018 creativeLabs.</span>
+            <a href="https://github.com/AccountGo/accountgo">AccountGo</a>
+            <span>&copy; 2018 All rights reserved.</span>
         </div>
         <div class="ml-auto">
             <span>Powered by</span>
-            <a href="https://coreui.io">CoreUI</a>
+            <a href="http://accountgo.net">AccountGo</a>
         </div>
     </footer>
     <!-- Bootstrap and necessary plugins-->
