change logo name to accountgo

--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -22,8 +22,9 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
-            <img class="navbar-brand-full" src="~/images/brand/logo.svg" width="89" height="25" alt="AccountGo Logo">
-            <img class="navbar-brand-minimized" src="~/images/brand/sygnet.svg" width="30" height="30" alt="AccountGo Logo">
+            <!-- <img class="navbar-brand-full" src="~/images/brand/logo.svg" width="89" height="25" alt="AccountGo Logo">
+            <img class="navbar-brand-minimized" src="~/images/brand/sygnet.svg" width="30" height="30" alt="AccountGo Logo"> -->
+            <b>AccountGo</b>
         </a>
         <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
             <span class="navbar-toggler-icon"></span>
