--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -9,8 +9,10 @@
     <title>AccountGo</title>
     <!-- Icons-->
     <link href="~/lib/@@coreui/icons/css/coreui-icons.min.css" rel="stylesheet">
-    <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <!-- <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
     <!-- Main styles for this application-->
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/custom.css" rel="stylesheet">
@@ -22,9 +24,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
-            <!-- <img class="navbar-brand-full" src="~/images/brand/logo.svg" width="89" height="25" alt="AccountGo Logo">
-            <img class="navbar-brand-minimized" src="~/images/brand/sygnet.svg" width="30" height="30" alt="AccountGo Logo"> -->
-            <b>AccountGo</b>
+            <img class="navbar-brand-full" src="~/images/AccountGo-logo.png" width="90" height="30"  alt="AccountGo Logo">
+            <img class="navbar-brand-minimized" src="~/images/AccountGo-logo.png" width="30" height="30" alt="AccountGo Logo">
         </a>
         <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
             <span class="navbar-toggler-icon"></span>
@@ -102,7 +103,7 @@
                     <a class="dropdown-item" href="#">
                         <i class="fa fa-shield"></i> Lock Account
                     </a>
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" href="~/account/signout">
                         <i class="fa fa-lock"></i> Logout
                     </a>
                 </div>
@@ -299,14 +300,14 @@
         </div>
         <main class="main">
             <!-- Breadcrumb-->
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">Home</li>
+            <!-- <ol class="breadcrumb"> -->
+                <!-- <li class="breadcrumb-item">Home</li>
                 <li class="breadcrumb-item">
                     <a href="#">Admin</a>
                 </li>
-                <li class="breadcrumb-item active">Dashboard</li>
+                <li class="breadcrumb-item active">Dashboard</li> -->
                 <!-- Breadcrumb Menu-->
-                <li class="breadcrumb-menu d-md-down-none">
+                <!-- <li class="breadcrumb-menu d-md-down-none">
                     <div class="btn-group" role="group" aria-label="Button group">
                         <a class="btn" href="#">
                             <i class="icon-speech"></i>
@@ -318,8 +319,8 @@
                             <i class="icon-settings"></i>  Settings
                         </a>
                     </div>
-                </li>
-            </ol>
+                </li> -->
+            <!-- </ol> -->
             <div class="container-fluid">
                 <div class="animated fadeIn">
                     <!-- PAGE CONTENT -->
