--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -13,16 +13,11 @@
 <form action="~/purchasing/savevendor" method="post">
     <div id="divVendorCard" class="col-md-9">
         @Html.HiddenFor(m => m.Id)
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">General</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
+        <div class="card">
+            <div class="card-header">
+                <a data-toggle="collapse" href="#general"><i class="fa fa-align-justify"></i></a> General
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="general">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-2">No</div>
@@ -66,19 +61,14 @@
             </div>
         </div>
 
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Contact</h3>
+        <div class="card">
+            <div class="card-header">
+                <a data-toggle="collapse" href="#contact"><i class="fa fa-align-justify"></i></a> Contact
                 <a href="~/contact/Contacts?partyId=@Model.Id&partyType=2" id="linkContacts" class="btn">
                     ...
                 </a>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="contact">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-4">First Name</div>
@@ -122,16 +112,11 @@
             </div>
         </div>
 
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Invoicing</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
+        <div class="card">
+            <div class="card-header">
+                <a data-toggle="collapse" href="#invoicing"><i class="fa fa-align-justify"></i></a> Invoicing
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="invoicing">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-6">Accounts Payable</div>
@@ -163,16 +148,11 @@
             </div>
         </div>
 
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Payment</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
+        <div class="card">
+            <div class="card-header">
+            <a data-toggle="collapse" href="#payment"><i class="fa fa-align-justify"></i></a> Payment
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="payment">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-4">Payment Term</div>
