--- a/src/AccountGoWeb/Views/Sales/AddReceipt.cshtml
+++ b/src/AccountGoWeb/Views/Sales/AddReceipt.cshtml
@@ -3,8 +3,8 @@
 <form action="~/sales/addreceipt" method="post">
     <div class="col-sm-6">
         @Html.ValidationSummary(true)
-        <div class="box">
-            <div class="box-body">
+        <div class="card">
+            <div class="card-body">
                 <div class="row">
                     <div class="col-sm-2">Customer</div>
                     <div class="col-sm-10">
