--- a/src/AccountGoWeb/Views/Sales/Customer.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customer.cshtml
@@ -12,16 +12,11 @@
 <form action="~/sales/savecustomer" method="post">
     <div id="divCustomerCard" class="col-md-9">
         @Html.HiddenFor(m => m.Id)
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">General</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
+        <div class="card">
+            <div class="card-header">
+                <a data-toggle="collapse" href="#general" aria-expanded="true" aria-controls="general"><i class="fa fa-align-justify"></i></a> General
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="general">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-2">No</div>
@@ -65,20 +60,15 @@
             </div>
         </div>
 
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Contact</h3>
+        <div class="card">
+            <div class="card-header">
+                <a data-toggle="collapse" href="#contact" aria-expanded="true" aria-controls="contact"><i class="fa fa-align-justify"></i></a> Contact
                 <a href="~/contact/Contacts?partyId=@Model.Id&partyType=1" id="linkContacts" class="btn">
                    ...                 
                 </a>
                 @*<input id="btnContacts" class="btn btn-sm btn-default btn-flat" type="submit" value="..." />*@ 
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="contact">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-4">First Name</div>
@@ -122,16 +112,11 @@
             </div>
         </div>
 
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Invoicing</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
+        <div class="card">
+            <div class="card-header">
+                <a data-toggle="collapse" href="#invoicing" aria-expanded="true" aria-controls="invoicing"><i class="fa fa-align-justify"></i></a> Invoicing
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="invoicing">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-6">Accounts Receivable</div>
@@ -169,16 +154,11 @@
             </div>
         </div>
 
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">Payment</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
+        <div class="card">
+            <div class="card-header">
+                <a data-toggle="collapse" href="#payment" aria-expanded="true" aria-controls="payment"><i class="fa fa-align-justify"></i></a> Payment
             </div>
-            <div class="box-body">
+            <div class="card-body collapse show row" id="payment">
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-4">Payment Term</div>
@@ -197,6 +177,7 @@
         <a href="~/sales/customers" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
     </div>
 </form>
+
 @section scripts{
     <script src="~/js/custom.js" type="text/javascript"></script>
     <script>
