fix reference to renamed light.css

--- a/src/AccountGoWeb/Views/Account/SignIn.cshtml
+++ b/src/AccountGoWeb/Views/Account/SignIn.cshtml
@@ -20,7 +20,7 @@
     <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <!-- Main styles for this application-->
-    <link href="~/css/style.css" rel="stylesheet">
+    <link href="~/css/light.min.css" rel="stylesheet">
     <link href="~/vendors/pace-progress/css/pace.min.css" rel="stylesheet">
 </head>
 <body class="app flex-row align-items-center">
