--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css"> -->
     <!-- Main styles for this application-->
-    <link href="~/css/style.css" rel="stylesheet">
+    <link href="~/css/light.min.css" rel="stylesheet">
     <link href="~/css/custom.css" rel="stylesheet">
     <link href="~/vendors/pace-progress/css/pace.min.css" rel="stylesheet">
 </head>
