added node-sass for overriding and customizing styles

--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -14,9 +14,8 @@
     <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css"> -->
     <!-- Main styles for this application-->
-    <link href="~/css/light.min.css" rel="stylesheet">
-    <link href="~/css/custom.css" rel="stylesheet">
-    <link href="~/vendors/pace-progress/css/pace.min.css" rel="stylesheet">
+    <link href="~/css/light.css" rel="stylesheet">
+    <link href="~/css/vendors/pace-progress/css/pace.css" rel="stylesheet">
 </head>
 <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
     <header class="app-header navbar">
@@ -118,7 +117,6 @@
     </header>
     <div class="app-body">
         <div class="sidebar">
-            <button class="sidebar-minimizer brand-minimizer" type="button"></button>
             <nav class="sidebar-nav">
                 <ul class="nav">
                     <li class="nav-item">
@@ -297,6 +295,7 @@
                     </li>
                 </ul>
             </nav>
+            <button class="sidebar-minimizer brand-minimizer" type="button"></button>
         </div>
         <main class="main">
             <!-- Breadcrumb-->
