--- a/src/AccountGoWeb/Scss/_shared-custom.scss
+++ b/src/AccountGoWeb/Scss/_shared-custom.scss
@@ -1,4 +1,4 @@
-// Here you can add other styles
+// Here you can add other styles applicable to all themes
 .inactiveLink {
   pointer-events: none;
   opacity: 0.65;
