--- a/src/AccountGoWeb/Views/Account/SignIn.cshtml
+++ b/src/AccountGoWeb/Views/Account/SignIn.cshtml
@@ -20,8 +20,8 @@
     <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <!-- Main styles for this application-->
-    <link href="~/css/light.min.css" rel="stylesheet">
-    <link href="~/vendors/pace-progress/css/pace.min.css" rel="stylesheet">
+    <link href="~/css/dark.css" rel="stylesheet">
+    <link href="~/css/vendors/pace-progress/css/pace.css" rel="stylesheet">
 </head>
 <body class="app flex-row align-items-center">
     <div class="container">
