--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
-            <img class="navbar-brand-full" src="~/images/AccountGo-logo.png" width="90" height="30"  alt="AccountGo Logo">
-            <img class="navbar-brand-minimized" src="~/images/AccountGo-logo.png" width="30" height="30" alt="AccountGo Logo">
+            <img class="navbar-brand-full" src="~/images/Dark-Logo.svg" width="90" height="30"  alt="AccountGo Logo">
+            <img class="navbar-brand-minimized" src="~/images/Dark-Logo.svg" width="30" height="30" alt="AccountGo Logo">
         </a>
         <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
             <span class="navbar-toggler-icon"></span>
